--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -5,13 +5,14 @@
   font-family: "Space Grotesk", serif;
 
   /* COLORS */
-  --primary: #00A4B8;
-  --secondary: #045B6B;
+  --primary: #00a4b8;
+  --secondary: #045b6b;
+  --opacity: #00a3b81f;
   --black: #000000;
-  --gray: #4A4A4A;
-  --white: #FFFFFF;
+  --gray: #4a4a4a;
+  --white: #ffffff;
   /* BACKGROUND */
-  --background: #FBFBFB;
+  --background: #fbfbfb;
   /* FONT-SIZE */
   --title: 64px;
   --subtitle: 24px;
@@ -73,4 +74,14 @@ a {
   height: auto;
   min-height: 20vh;
   padding: 20px 100px;
+}
+
+main a,
+p,
+h1,
+h2,
+h3,
+span {
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
