--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -81,6 +81,7 @@ p,
 h1,
 h2,
 h3,
+b,
 span {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
