--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,3 +36,56 @@
 .banner_img {
   width: 38%;
 }
+
+/* SKILL CARDS*/
+.skills {
+  width: 100%;
+  min-height: 70vh;
+  height: auto;
+  padding-bottom: 100px;
+}
+
+.skill_container {
+  margin-top: -50px;
+  width: 100%;
+  height: 100%;
+  padding: 0px 60px;
+  gap: 7%;
+  flex-wrap: wrap;
+}
+
+.skill_card {
+  min-width: 300px;
+  max-width: 400px;
+  min-height: 400px;
+  width: auto;
+  height: auto;
+  background-color: var(--white);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 9px;
+  margin-bottom: 100px;
+}
+
+.skill_img {
+  width: 35%;
+  margin: 10px 0px;
+}
+
+.skill_title,
+.skill_desc {
+  text-align: justify;
+  max-width: 320px;
+  margin-bottom: 30px;
+}
+
+.skill_title {
+  color: var(--black);
+  font-size: var(--subtitle);
+  font-weight: 500;
+  text-align: center;
+}
+
+.skill_desc {
+  color: var(--gray);
+  font-size: var(--text);
+}
