add cards to projects page

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -7,6 +7,7 @@
   /* COLORS */
   --primary: #00a4b8;
   --secondary: #045b6b;
+  --light-primary: #eafdff;
   --opacity: #00a3b81f;
   --black: #000000;
   --gray: #4a4a4a;
