--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@
   height: 100%;
 }
 
-.banner_text h1 {
+.title {
   font-size: var(--title);
   color: var(--black);
 }
@@ -25,7 +25,7 @@
   font-weight: 400;
 }
 
-.banner_text a {
+.contact_btn {
   padding: 12px 20px;
   margin-top: 30px;
   border-radius: 6px;
@@ -180,4 +180,21 @@
 
 .slick-current {
   transform: scale(1);
+}
+
+/* CONTACT INFO */
+.contact {
+  width: 100%;
+  min-height: 40vh;
+}
+
+.socials {
+  margin: 50px 0px 30px 0px;
+  list-style: none;
+}
+
+.socials li a ion-icon {
+  font-size: 40px;
+  padding: 0px 20px;
+  color: rgba(0, 0, 0, 0.5);
 }
