--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -83,6 +83,7 @@ h1,
 h2,
 h3,
 b,
+li,
 span {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
