add new project page and fix header

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -20,6 +20,10 @@
   justify-content: flex-end !important;
 }
 
+.reverse > .project_img a {
+  justify-content: flex-end !important;
+}
+
 .colored_bg {
   background-color: #e7f5fd !important;
 }
