--- a/src/styles/header_footer.css
+++ b/src/styles/header_footer.css
@@ -1,9 +1,13 @@
 /* HEADER */
 header {
   width: 100%;
-  height: 80px;
+  height: 70px !important;
   padding: 0px 60px;
   background-color: var(--primary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
 }
 
 header p,
@@ -97,11 +101,9 @@ header nav ul li .dropdown li a:hover {
   padding-left: 5px;
 }
 
-
-
 /* FOOTER */
 /* FOOTER */
-footer{
+footer {
   width: 100%;
   height: 22vh;
   margin-top: 120px;
@@ -110,6 +112,7 @@ footer{
   text-align: center;
 }
 
-footer .social_icon{
+footer .social_icon {
   color: var(--white);
+  font-size: 32px;
 }
