--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 /* BANNER */
 .banner {
+  margin-top: 70px;
   width: 100%;
   height: 80vh;
   padding: 0px 60px;
@@ -193,7 +194,7 @@
   list-style: none;
 }
 
-.social_icon{
+.social_icon {
   font-size: 40px;
   padding: 0px 20px;
   color: rgba(0, 0, 0, 0.5);
