--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -40,6 +40,7 @@
 .banner {
   width: 100%;
   height: 12vh;
+  margin-top: 70px;
   background-color: var(--primary);
 }
 
@@ -140,4 +141,36 @@
 }
 .project_text ul li {
   margin: 10px 0px;
+}
+
+/* IMAGE GALLERY */
+
+.gallery {
+  width: 100%;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.g_title {
+  color: var(--secondary);
+}
+
+.g_container {
+  width: 100%;
+  margin-top: 50px;
+  flex-wrap: wrap;
+  gap: 2.2%;
+  padding: 0px 200px;
+}
+
+.g_card {
+  flex: 1;
+}
+
+.g_img {
+  width: 100%;
+}
+
+.g_text {
+  margin-top: 20px;
 }
