finish index responsivity and mobile header

--- a/src/styles/header_footer.css
+++ b/src/styles/header_footer.css
@@ -3,7 +3,7 @@ header {
   width: 100%;
   height: 70px !important;
   padding: 0px 60px;
-  background-color: var(--primary);
+  background-color: var(--secondary);
   position: fixed;
   top: 0;
   left: 0;
@@ -101,6 +101,10 @@ header nav ul li .dropdown li a:hover {
   padding-left: 5px;
 }
 
+.selected a {
+  background-color: var(--secondary);
+}
+
 /* FOOTER */
 /* FOOTER */
 footer {
@@ -115,4 +119,80 @@ footer {
 footer .social_icon {
   color: var(--white);
   font-size: 32px;
+}
+
+.open_menu_btn {
+  font-size: var(--title);
+  color: var(--white);
+  cursor: pointer;
+}
+
+.close_menu_btn,
+.open_menu_btn,
+.menu_mobile {
+  display: none !important;
+}
+
+/* MOBILE */
+@media (min-width: 200px) and (max-width: 700px) {
+  header {
+    padding: 0px 20px;
+  }
+
+  header nav {
+    display: none !important;
+  }
+
+  .close_menu_btn,
+  .open_menu_btn,
+  .menu_mobile {
+    display: flex !important;
+  }
+
+  .close_menu_btn {
+    font-size: var(--title);
+    color: var(--white);
+    cursor: pointer;
+    position: absolute;
+    top: 5px;
+    right: 12px;
+  }
+
+  .menu_mobile {
+    width: 60vw;
+    height: 100vh;
+    background-color: var(--primary);
+    display: flex !important;
+    position: absolute;
+    top: 0px;
+    right: -400px;
+    padding: 0px 5px;
+    transition: 0.2s ease-out;
+  }
+
+  .menu_mobile ul {
+    width: 100%;
+    height: 40%;
+    margin-top: 120px;
+  }
+
+  .menu_mobile ul li {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 0px;
+  }
+
+  .menu_mobile ul li a {
+    padding: 12px 20px !important;
+    margin-left: 0px !important;
+    border-radius: 6px;
+    transition: 0.1s ease-in;
+    width: 100%;
+    font-weight: 500;
+    text-align: center;
+  }
 }
