--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -88,3 +88,7 @@ span {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+img {
+  border-radius: 6px;
+}
