--- a/src/styles/header_footer.css
+++ b/src/styles/header_footer.css
@@ -195,4 +195,13 @@ footer .social_icon {
     font-weight: 500;
     text-align: center;
   }
+
+  footer {
+    padding: 0px 30px;
+  }
+
+  footer .footer_text {
+    flex-direction: column !important;
+    gap: 10px;
+  }
 }
