--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -84,6 +84,7 @@ h2,
 h3,
 b,
 li,
+button,
 span {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -91,4 +92,8 @@ span {
 
 img {
   border-radius: 6px;
+}
+
+.hidden {
+  display: none;
 }
